Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignNumberNumObjField.quorum
class Main
    Number v
    v:SetValue(5.0)
    action Main
        Test(v)
    end

    action Test(number var)
        if var = 5.0
            output "passed"
        end
    end
end
