Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumberNumObj.quorum
class Main
    action Main
        Number v
        v:SetValue(5.0)
        Test(v)
    end

    action Test(number var)
    end
end
